BusOne02/src/objects/Content_Type_vod__c.object
<CustomObject>
    <description>Content Type is the core object to store content type records.</description>
    <fields>
        <fullName>Disclaimer_Page_Url_vod__c</fullName>
        <description>Stores the disclaimer URL that is shown to an HCP during the subscripton process to a service account</description>
        <label>Disclaimer Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id field used for data loading and integrating external systems.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Account_App_Id_vod__c</fullName>
        <description>Stores Wechat Service Account APP ID</description>
        <label>Service Account App Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Content Type</label>
    <nameField>
        <label>Content Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Types</pluralLabel>
    <recordTypes>
        <fullName>Content_Type_vod</fullName>
        <active>true</active>
        <description>Used for records created for Content_Type_vod.</description>
        <label>Content_Type_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>WeChat_Service_Account_vod</fullName>
        <active>true</active>
        <description>Stores WeChat service account information</description>
        <label>WeChat_Service_Account_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>